--- a/t09-1c/t09-1c.vcxproj
+++ b/t09-1c/t09-1c.vcxproj
@@ -76,6 +76,7 @@
   <ItemGroup>
     <ClInclude Include="AddLogic.h" />
     <ClInclude Include="BaseClassLogic.h" />
+    <ClInclude Include="BaseClassParser.h" />
     <ClInclude Include="DeleteLogic.h" />
     <ClInclude Include="EditLogic.h" />
     <ClInclude Include="FileController.h" />
@@ -89,6 +90,7 @@
   <ItemGroup>
     <ClCompile Include="AddLogic.cpp" />
     <ClCompile Include="BaseClassLogic.cpp" />
+    <ClCompile Include="BaseClassParser.cpp" />
     <ClCompile Include="DeleteLogic.cpp" />
     <ClCompile Include="EditLogic.cpp" />
     <ClCompile Include="FileController.cpp" />
