--- a/t09-1c/t09-1c.vcxproj.filters
+++ b/t09-1c/t09-1c.vcxproj.filters
@@ -51,6 +51,9 @@
     <ClInclude Include="SearchLogic.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="BaseClassParser.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
@@ -81,6 +84,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="SearchLogic.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="BaseClassParser.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
