--- a/t09-1c/t09-1c.vcxproj.filters
+++ b/t09-1c/t09-1c.vcxproj.filters
@@ -54,6 +54,9 @@
     <ClInclude Include="BaseClassParser.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="AddParser.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
@@ -87,6 +90,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="BaseClassParser.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="AddParser.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
