--- a/t09-1c_output/t09-1c_output.vcxproj
+++ b/t09-1c_output/t09-1c_output.vcxproj
@@ -11,9 +11,9 @@
     </ProjectConfiguration>
   </ItemGroup>
   <PropertyGroup Label="Globals">
-    <ProjectGuid>{7A58E25A-AA11-4516-AD00-504F7786A783}</ProjectGuid>
+    <ProjectGuid>{817C9E26-B8CF-4855-BD9F-101C045AE20A}</ProjectGuid>
     <Keyword>Win32Proj</Keyword>
-    <RootNamespace>t091c</RootNamespace>
+    <RootNamespace>t091c_output</RootNamespace>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
@@ -39,12 +39,7 @@
     <Import Project="$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props" Condition="exists('$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props')" Label="LocalAppDataPlatform" />
   </ImportGroup>
   <PropertyGroup Label="UserMacros" />
-  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
-    <IncludePath>$(VC_IncludePath);$(WindowsSDK_IncludePath);$(SolutionDir)\t09-1c_parser;$(SolutionDir)\t09-1c_output;$(SolutionDir)\t09-1c_logic;</IncludePath>
-  </PropertyGroup>
-  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
-    <IncludePath>$(VC_IncludePath);$(WindowsSDK_IncludePath);$(SolutionDir)\t09-1c_parser;$(SolutionDir)\t09-1c_output;$(SolutionDir)\t09-1c_logic;</IncludePath>
-  </PropertyGroup>
+  <PropertyGroup />
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
       <PrecompiledHeader>Use</PrecompiledHeader>
@@ -79,29 +74,14 @@
     <Text Include="ReadMe.txt" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="ProgramController.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
-    <ClInclude Include="VariableHelperFunctions.h" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="ProgramController.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
     </ClCompile>
-    <ClCompile Include="VariableHelperFunctions.cpp" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\t09-1c_logic\t09-1c_logic.vcxproj">
-      <Project>{d1287356-60fb-4240-a50d-516ecbcb9d4e}</Project>
-    </ProjectReference>
-    <ProjectReference Include="..\t09-1c_output\t09-1c_output.vcxproj">
-      <Project>{817c9e26-b8cf-4855-bd9f-101c045ae20a}</Project>
-    </ProjectReference>
-    <ProjectReference Include="..\t09-1c_parser\t09-1c_parser.vcxproj">
-      <Project>{a8403f36-1f55-4b00-a938-b7dab4caf6d4}</Project>
-    </ProjectReference>
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
