--- a/t09-1c_fileAccess/t09-1c_fileAccess.vcxproj.filters
+++ b/t09-1c_fileAccess/t09-1c_fileAccess.vcxproj.filters
@@ -24,10 +24,7 @@
     <ClInclude Include="targetver.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="VariableHelperFunctions.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="ProgramController.h">
+    <ClInclude Include="FileController.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
@@ -35,10 +32,7 @@
     <ClCompile Include="stdafx.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="VariableHelperFunctions.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="ProgramController.cpp">
+    <ClCompile Include="FileController.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
