--- a/t09-1c_parser/t09-1c_parser.vcxproj.filters
+++ b/t09-1c_parser/t09-1c_parser.vcxproj.filters
@@ -33,6 +33,9 @@
     <ClInclude Include="ParsedDataPackage.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="DeleteParser.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
@@ -45,6 +48,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="ParsedDataPackage.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="DeleteParser.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
