--- a/t09-1c_parser/t09-1c_parser.vcxproj
+++ b/t09-1c_parser/t09-1c_parser.vcxproj
@@ -76,6 +76,7 @@
   <ItemGroup>
     <ClInclude Include="AddParser.h" />
     <ClInclude Include="BaseClassParser.h" />
+    <ClInclude Include="DeleteParser.h" />
     <ClInclude Include="ParsedDataPackage.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
@@ -83,6 +84,7 @@
   <ItemGroup>
     <ClCompile Include="AddParser.cpp" />
     <ClCompile Include="BaseClassParser.cpp" />
+    <ClCompile Include="DeleteParser.cpp" />
     <ClCompile Include="ParsedDataPackage.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
