--- a/t09-1c_parser/t09-1c_parser.vcxproj
+++ b/t09-1c_parser/t09-1c_parser.vcxproj
@@ -80,6 +80,7 @@
     <ClInclude Include="DeleteParser.h" />
     <ClInclude Include="EditParser.h" />
     <ClInclude Include="ParsedDataPackage.h" />
+    <ClInclude Include="ParserHelperFunctions.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
   </ItemGroup>
@@ -90,6 +91,7 @@
     <ClCompile Include="DeleteParser.cpp" />
     <ClCompile Include="EditParser.cpp" />
     <ClCompile Include="ParsedDataPackage.cpp" />
+    <ClCompile Include="ParserHelperFunctions.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
