--- a/t09-1c/t09-1c.vcxproj
+++ b/t09-1c/t09-1c.vcxproj
@@ -79,12 +79,14 @@
     <Text Include="ReadMe.txt" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="ParsedDataDeployer.h" />
     <ClInclude Include="ProgramController.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
     <ClInclude Include="VariableHelperFunctions.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="ParsedDataDeployer.cpp" />
     <ClCompile Include="ProgramController.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
