file Access code Alpha stage

--- a/t09-1c_fileAccess/t09-1c_fileAccess.vcxproj.filters
+++ b/t09-1c_fileAccess/t09-1c_fileAccess.vcxproj.filters
@@ -27,12 +27,24 @@
     <ClInclude Include="FileController.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="MemoryController.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="FileEntryFormatter.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="FileController.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="MemoryController.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="FileEntryFormatter.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
