--- a/t09-1c_logic/t09-1c_logic.vcxproj.filters
+++ b/t09-1c_logic/t09-1c_logic.vcxproj.filters
@@ -45,6 +45,9 @@
     <ClInclude Include="LogicHelperFunctions.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="FileLogic.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
@@ -69,6 +72,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="LogicHelperFunctions.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="FileLogic.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
