--- a/t09-1c_fileAccess/t09-1c_fileAccess.vcxproj
+++ b/t09-1c_fileAccess/t09-1c_fileAccess.vcxproj
@@ -75,11 +75,15 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="FileController.h" />
+    <ClInclude Include="FileEntryFormatter.h" />
+    <ClInclude Include="MemoryController.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="FileController.cpp" />
+    <ClCompile Include="FileEntryFormatter.cpp" />
+    <ClCompile Include="MemoryController.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
