--- a/t09-1c_logic/t09-1c_logic.vcxproj
+++ b/t09-1c_logic/t09-1c_logic.vcxproj
@@ -88,6 +88,7 @@
     <ClInclude Include="SearchLogic.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
+    <ClInclude Include="TimeLogic.h" />
     <ClInclude Include="UndoLogic.h" />
   </ItemGroup>
   <ItemGroup>
@@ -102,6 +103,7 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
     </ClCompile>
+    <ClCompile Include="TimeLogic.cpp" />
     <ClCompile Include="UndoLogic.cpp" />
   </ItemGroup>
   <ItemGroup>
