--- a/t09-1c_logic/t09-1c_logic.vcxproj.filters
+++ b/t09-1c_logic/t09-1c_logic.vcxproj.filters
@@ -48,6 +48,9 @@
     <ClInclude Include="FileLogic.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="TimeLogic.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
@@ -75,6 +78,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="FileLogic.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="TimeLogic.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
