Start Implement Time Parser

--- a/t09-1c_parser/t09-1c_parser.vcxproj.filters
+++ b/t09-1c_parser/t09-1c_parser.vcxproj.filters
@@ -45,6 +45,9 @@
     <ClInclude Include="ParserHelperFunctions.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="TimeParser.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
@@ -69,6 +72,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="ParserHelperFunctions.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="TimeParser.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
