--- a/t09-1c_parser/t09-1c_parser.vcxproj
+++ b/t09-1c_parser/t09-1c_parser.vcxproj
@@ -83,6 +83,7 @@
     <ClInclude Include="ParserHelperFunctions.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
+    <ClInclude Include="TimeParser.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="AddParser.cpp" />
@@ -96,6 +97,7 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
     </ClCompile>
+    <ClCompile Include="TimeParser.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
