--- a/t09-1c_logic/t09-1c_logic.vcxproj
+++ b/t09-1c_logic/t09-1c_logic.vcxproj
@@ -80,6 +80,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="AddLogic.h" />
+    <ClInclude Include="ArrangeLogic.h" />
     <ClInclude Include="BaseClassLogic.h" />
     <ClInclude Include="DeleteLogic.h" />
     <ClInclude Include="EditLogic.h" />
@@ -93,6 +94,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="AddLogic.cpp" />
+    <ClCompile Include="ArrangeLogic.cpp" />
     <ClCompile Include="BaseClassLogic.cpp" />
     <ClCompile Include="DeleteLogic.cpp" />
     <ClCompile Include="EditLogic.cpp" />
