--- a/t09-1c/t09-1c.vcxproj
+++ b/t09-1c/t09-1c.vcxproj
@@ -40,7 +40,7 @@
   </ImportGroup>
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
-    <IncludePath>$(VC_IncludePath);$(WindowsSDK_IncludePath);$(SolutionDir)\t09-1c_parser;$(SolutionDir)\t09-1c_output;$(SolutionDir)\t09-1c_logic;</IncludePath>
+    <IncludePath>$(VC_IncludePath);$(WindowsSDK_IncludePath);$(SolutionDir)\t09-1c_parser;$(SolutionDir)\t09-1c_output;$(SolutionDir)\t09-1c_logic;$(SolutionDir)\t09-1c_fileAccess;</IncludePath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <IncludePath>$(VC_IncludePath);$(WindowsSDK_IncludePath);$(SolutionDir)\t09-1c_parser;$(SolutionDir)\t09-1c_output;$(SolutionDir)\t09-1c_logic;</IncludePath>
