--- a/t09-1c_logic/t09-1c_logic.vcxproj.filters
+++ b/t09-1c_logic/t09-1c_logic.vcxproj.filters
@@ -57,6 +57,9 @@
     <ClInclude Include="DL_Algorithm.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="DisplayLogic.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
@@ -90,6 +93,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="DL_Algorithm.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="DisplayLogic.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
