--- a/t09-1c_parser/t09-1c_parser.vcxproj.filters
+++ b/t09-1c_parser/t09-1c_parser.vcxproj.filters
@@ -48,6 +48,9 @@
     <ClInclude Include="TimeParser.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="CompleteParser.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
@@ -75,6 +78,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="TimeParser.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="CompleteParser.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
