--- a/t09-1c_parser/t09-1c_parser.vcxproj
+++ b/t09-1c_parser/t09-1c_parser.vcxproj
@@ -82,6 +82,7 @@
     <ClInclude Include="EditParser.h" />
     <ClInclude Include="ParsedDataPackage.h" />
     <ClInclude Include="ParserHelperFunctions.h" />
+    <ClInclude Include="SearchParser.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
     <ClInclude Include="TimeParser.h" />
@@ -94,6 +95,7 @@
     <ClCompile Include="EditParser.cpp" />
     <ClCompile Include="ParsedDataPackage.cpp" />
     <ClCompile Include="ParserHelperFunctions.cpp" />
+    <ClCompile Include="SearchParser.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
