--- a/t09-1c_logic/t09-1c_logic.vcxproj
+++ b/t09-1c_logic/t09-1c_logic.vcxproj
@@ -83,6 +83,7 @@
     <ClInclude Include="AddLogic.h" />
     <ClInclude Include="ArrangeLogic.h" />
     <ClInclude Include="BaseClassLogic.h" />
+    <ClInclude Include="CompleteLogic.h" />
     <ClInclude Include="DeleteLogic.h" />
     <ClInclude Include="DisplayLogic.h" />
     <ClInclude Include="DL_Algorithm.h" />
@@ -99,6 +100,7 @@
     <ClCompile Include="AddLogic.cpp" />
     <ClCompile Include="ArrangeLogic.cpp" />
     <ClCompile Include="BaseClassLogic.cpp" />
+    <ClCompile Include="CompleteLogic.cpp" />
     <ClCompile Include="DeleteLogic.cpp" />
     <ClCompile Include="DisplayLogic.cpp" />
     <ClCompile Include="DL_Algorithm.cpp" />
