Unified Search Logic Implemented

--- a/t09-1c_logic/t09-1c_logic.vcxproj.filters
+++ b/t09-1c_logic/t09-1c_logic.vcxproj.filters
@@ -104,5 +104,8 @@
     <ClCompile Include="CompleteLogic.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="SearchLogic.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
