--- a/t09-1c_test/t09-1c_test.vcxproj
+++ b/t09-1c_test/t09-1c_test.vcxproj
@@ -88,6 +88,8 @@
     <ClInclude Include="targetver.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="UnitTestEditP.cpp" />
+    <ClCompile Include="UnitTestDeleteP.cpp" />
     <ClCompile Include="UnitTestParserNL.cpp" />
     <ClCompile Include="UnitTestSearch.cpp" />
     <ClCompile Include="stdafx.cpp">
