--- a/t09-1c_test/t09-1c_test.vcxproj.filters
+++ b/t09-1c_test/t09-1c_test.vcxproj.filters
@@ -38,6 +38,12 @@
     <ClCompile Include="UnitTestParserNL.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="UnitTestDeleteP.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="UnitTestEditP.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="t09-1c_test.rc">
