--- a/t09-1c_parser/t09-1c_parser.vcxproj.filters
+++ b/t09-1c_parser/t09-1c_parser.vcxproj.filters
@@ -51,6 +51,9 @@
     <ClInclude Include="SearchParser.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="CompleteParser.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
@@ -81,6 +84,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="SearchParser.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="CompleteParser.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
